# polymarket-auto-trading-agent

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README-cn.md  README.md  pyproject.toml  run_agent.bat  setup.py  start_agent.sh
.claude/: settings.local.json.example
agent/: __init__.py  hooks.py  main.py  prompts.py  scheduler.py  tools.py
config/: paths.py  risk.py
docs/: expiry-convergence-strategy.md
hooks/: post_tool_use.py  session_start.py
mcp_server/: __init__.py  formatters.py  server.py
mcp_server/tools/: __init__.py  analysis_tools.py  market_tools.py  trading_tools.py
polymarket/: __init__.py  analyzer.py  anomaly_detector.py  client.py  config.py  fetcher.py  models.py
scripts/: analyze_outcomes.py  find_opportunities.py  gen_architecture.py  set_allowances.py  withdraw.py
web-ui/backend-py/: backfill.py  data_reader.py  main.py
web-ui/frontend/: .env.example  index.html  package.json  vite.config.ts
web-ui/frontend/src/: App.tsx
web-ui/frontend/src/components/common/: Navbar.css  Navbar.tsx
web-ui/frontend/src/components/trading/: AccountValueChart.css  AccountValueChart.tsx  TraceViewer.css  TraceViewer.tsx
web-ui/frontend/src/hooks/: usePolling.ts  useWebSocket.ts
web-ui/frontend/src/pages/: Live.css  Live.tsx  Trace.css  Trace.tsx  TradingLog.css  TradingLog.tsx
web-ui/frontend/src/services/: api.ts
