[project]
name = "polymarket-auto-trading-agent"
version = "1.0.0"
description = "AI-powered autonomous trading agent for Polymarket prediction markets"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "mcp>=1.0.0",
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
trading = [
    "py-clob-client>=0.1.0",
]

[project.scripts]
polymarket-mcp = "mcp_server.server:main"
polymarket-agent = "agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
